Fixed some classnames, still a mess, dont know how to make it better, cleaned the code ( alt shift l).

--- a/styles.css
+++ b/styles.css
@@ -21,10 +21,11 @@
 }
 
 /* ------------------------------- 2. Typography ----------------------------------- */
-h1, h2, h3, h4, h5, h6{
+h1, h2, h3, h4, h5, h6 {
     font-family: 'Merriweather', serif;
 }
-p{
+
+p {
     font-family: 'Roboto', sans-serif;
 }
 
@@ -39,8 +40,7 @@ p{
 /*Grijs #7A7A7A (voor de service-tegel tekst);*/
 
 /* ------------------------------- 4. Areas ---------------------------------------- */
-body{
-
+body {
 
 
 }
@@ -61,20 +61,21 @@ body{
     flex-basis: 600px;
     display: flex;
     flex-direction: column;
-    margin:0 70px;
+    margin: 0 70px;
     gap: 100px;
 }
-.outer-container-footer{
+
+.outer-container-footer {
     display: flex;
     justify-content: center;
     color: white;
     background-color: black;
-    font-size:13px;
+    font-size: 13px;
 }
 
 /* --------------- 4.0 Area 1 ------------------------- */
-header{
-    background-image: linear-gradient(to bottom right, #4845E4 , #4d2ea0);
+header {
+    background-image: linear-gradient(to bottom right, #4845E4, #4d2ea0);
     width: 100%;
     height: 30vh;
     color: white;
@@ -82,32 +83,35 @@ header{
     flex-direction: column;
 }
 
-.header_content__cta{
+.header_content__cta {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding-top: 80px;
     justify-content: center;
-max-width: 100vw;
+    max-width: 100vw;
 }
-#header{
+
+#header {
     position: relative;
 }
-.header_squiggle{
+
+.header_squiggle {
     background-image: url("assets/squiggle_line_stripe.svg");
     position: absolute;
     width: 75px;
     height: 75px;
     bottom: 0;
 }
-header nav{
+
+header nav {
     display: flex;
     justify-content: flex-end;
     flex-wrap: nowrap;
     gap: 20px;
 }
 
-header ul{
+header ul {
     display: flex;
     list-style: none;
     flex-basis: auto;
@@ -116,52 +120,56 @@ header ul{
     flex-grow: 0;
     flex-shrink: 1;
 }
-.link_colour:link, .link_colour:visited{
+
+.link_colour:link, .link_colour:visited {
     text-decoration-line: none;
     color: white;
 }
-header li{
+
+header li {
     flex-basis: auto;
     list-style: none;
     color: white;
 }
 
 header button {
-    background-color: #ED4385 ;
+    background-color: #ED4385;
     border-radius: 20px;
     padding: 15px;
     color: white;
     border-color: #ED4385;
     font-size: 13px;
 }
-header p{
+
+header p {
     padding: 30px;
 }
-header img{
+
+header img {
     padding-top: 50px;
 
 }
 
-main{
+
+/* --------------- 4.0 Area 2 ------------------------- */
+main {
     display: flex;
     flex-direction: column;
-  min-height: auto;
+    min-height: auto;
     flex-basis: auto;
     flex-grow: 1;
     flex-shrink: 1;
 }
 
-
-/* --------------- 4.0 Area 2 ------------------------- */
-
-.inner-container-main{
+.inner-container-main {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 30px;
     color: #4d2ea0;
 }
-.main-container-center{
+
+.main--container--top {
     flex-basis: auto;
     display: flex;
     flex-direction: column;
@@ -171,42 +179,41 @@ main{
     padding-top: 60px
 }
 
-.link-main-click:link .link-main-click:visited{
-    color: #4d2ea0;
-    text-decoration-line: none;
-}
-.link-main:visited{
+.main--link:visited {
     color: #4d2ea0;
     text-decoration-line: none;
 }
 
 /* --------------- 4.0 Area 3 ------------------------- */
-.article-container{
+.article-container {
     display: flex;
     flex-direction: column;
     gap: 60px;
 }
-.container-class{
+
+.main--container--article {
     display: flex;
     justify-content: center;
     flex-direction: row;
     gap: 70px;
 }
 
-article h3{
+article h3 {
     font-size: 30px;
 }
-article{
+
+article {
     display: flex;
- flex-direction: column;
+    flex-direction: column;
     justify-content: center;
     gap: 30px;
 }
-.squiggle{
+
+.main--img--squiggle {
     max-width: 50px;
 }
 
-.container-article {
+.main--container--article--border {
     width: 25vw;
     justify-content: flex-start;
     gap: 0;
@@ -214,10 +221,12 @@ article{
     border: 1px solid #4d2ea0;
     color: #7A7A7A;
 }
- .container-article h4{
-     color: #4d2ea0;
- }
-.flex-basic-article{
+
+.main--container--article--border h4 {
+    color: #4d2ea0;
+}
+
+.main--container--article--border--flex {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -225,17 +234,20 @@ article{
     margin-bottom: 50px;
 
 }
-.article-img{
+
+.main--container--article--border--img {
     width: 60px;
     flex-grow: 0;
     flex-shrink: 0;
     gap: 0;
 }
-.article-h4{
-   padding-bottom: 20px;
+
+.main--container--article--h4 {
+    padding-bottom: 20px;
 }
-.form-layout{
-    background-image: linear-gradient(to bottom right, #4845E4 , #4d2ea0);
+
+.main--form--layout {
+    background-image: linear-gradient(to bottom right, #4845E4, #4d2ea0);
     height: auto;
     display: flex;
     flex-direction: column;
@@ -243,32 +255,33 @@ article{
     gap: 30px;
     padding-top: 50px;
 }
-.form-h4{
+
+.main--form--h4 {
     color: white;
     font-size: 30px;
 }
-.form-p{
+
+.main--form--p {
     color: white;
 }
-form{
+
+form {
     display: flex;
     flex-direction: column;
     color: white;
     width: 30vw;
 
 }
+
 form > input {
     margin-bottom: 30px;
     height: 30px;
     flex-grow: 1;
 
 }
-.input-message{
-height: 50px;
 
 
-}
-form > button{
+form > button {
     background-color: #ED4385;
     color: white;
     border-radius: 30px;
